<resources>
    <string name="app_name">Minesweeper</string>
    <string name="welcome_screen">WELCOME TO \nMINESWEEPER</string>
    <string name="login">login</string>
    <string name="play">play</string>
    <string name="leaderboards">leaderboards</string>
    <string name="quit">quit</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_username">Username</string>
    <string name="create_account">Create Account</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sample_login">Sign in</string>
</resources>
