<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uw.tacoma.edu.minesweeper.WelcomeActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/welcomeScreen"
        android:text="@string/welcome_screen"
        android:textSize="@dimen/text_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />


    <Button
        android:id="@+id/login_button"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeScreen"
        android:layout_weight="0.05"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/play_button"
        android:text="@string/play"
        android:onClick="gotoMinesweeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:layout_weight="0.05"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/leaderboards_button"
        android:text="@string/leaderboards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button"
        android:layout_weight="0.05"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/quit_button"
        android:text="@string/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboards_button"
        android:layout_weight="0.05"
        android:layout_marginTop="16dp" />
</android.support.constraint.ConstraintLayout>
